# LATTICE

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: base.yaml  dev.yaml  graph_health.yaml  graph_profiles.yaml  logging.yaml  permissions.yaml  tool_registry.yaml
config/prompts/: task_fingerprint.md
docs/architecture/: CURRENT_IMPLEMENTATION_OVERVIEW.md  DATABASE_REQUIREMENTS.md  DECOMPOSITION.md  IMPLEMENTATION_COVERAGE.md  current_implementation_overview.html
docs/decisions/: DECISIONS.md
docs/progress/: IMPLEMENTATION_LOG.md  TODO.md
docs/risks/: ARCHITECTURE_GAPS.md
src/helix/: __init__.py
src/lattice/: __init__.py
tests/: test_package.py
tests/app/: test_cli.py
tests/capability_evolution/: test_candidates.py  test_gap_and_tool_builder.py
tests/config/: test_settings.py
tests/core/: test_task_fingerprint.py
tests/db/: test_database_adapters.py
tests/graph/: test_graph_policies.py  test_graph_profiles.py  test_importer.py  test_packaged_demo_graph_loader.py
tests/graph_construction/: test_bootstrap.py
tests/graph_health/: test_lifecycle_state_manager.py  test_memory_health_compiler.py
tests/graph_patch/: test_patch_builder_auditor.py  test_patch_validator.py
tests/hooks/: test_hook_bus.py
tests/memory/: test_failure_to_constraint.py
tests/orchestration/: test_execution.py  test_plan_only.py
tests/permissions/: test_permission_gate.py
tests/planning/: test_plan_mode.py  test_workflow_path_search.py
tests/projection/: test_controlled_full_graph_recall.py  test_runtime_view_projector.py  (+1 more)
(+160 files in other folders)
