[project]
name = "helix"
version = "0.1.0"
description = "Agent-native workflow knowledge graph system for bioinformatics planning and controlled execution."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.12",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["helix"]
